--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1469,6 +1469,8 @@ build.json @home-assistant/supervisor
 /tests/components/youless/ @gjong
 /homeassistant/components/youtube/ @joostlek
 /tests/components/youtube/ @joostlek
+/homeassistant/components/youtube_lounge/ @FabioGNR
+/tests/components/youtube_lounge/ @FabioGNR
 /homeassistant/components/zamg/ @killer0071234
 /tests/components/zamg/ @killer0071234
 /homeassistant/components/zengge/ @emontnemery
