--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -243,6 +243,9 @@ aioftp==0.21.3
 # homeassistant.components.github
 aiogithubapi==22.10.1
 
+# homeassistant.components.youtube_lounge
+aiogoogle==5.1.0
+
 # homeassistant.components.guardian
 aioguardian==2022.07.0
 
@@ -2257,6 +2260,9 @@ pyxeoma==1.4.1
 
 # homeassistant.components.yardian
 pyyardian==1.1.0
+
+# homeassistant.components.youtube_lounge
+pyytlounge==0.0.1
 
 # homeassistant.components.qrcode
 pyzbar==0.1.7
