add version to manifest

--- a/homeassistant/components/youtube_lounge/manifest.json
+++ b/homeassistant/components/youtube_lounge/manifest.json
@@ -1,6 +1,7 @@
 {
   "domain": "youtube_lounge",
   "name": "YouTube Lounge",
+  "version": "0.0.1",
   "config_flow": true,
   "documentation": "https://www.home-assistant.io/integrations/youtube_lounge",
   "integration_type": "device",
