--- a/homeassistant/components/youtube_lounge/manifest.json
+++ b/homeassistant/components/youtube_lounge/manifest.json
@@ -5,11 +5,16 @@
   "config_flow": true,
   "documentation": "https://www.home-assistant.io/integrations/youtube_lounge",
   "integration_type": "device",
-  "requirements": ["pyytlounge==1.2.1", "aiogoogle==5.1.0"],
+  "requirements": [
+    "pyytlounge==1.3.0",
+    "aiogoogle==5.1.0"
+  ],
   "ssdp": [],
   "zeroconf": [],
   "homekit": {},
   "dependencies": [],
-  "codeowners": ["@FabioGNR"],
+  "codeowners": [
+    "@FabioGNR"
+  ],
   "iot_class": "cloud_push"
 }
